# aws-greengrass-labs-webrtc

./: .gitmodules  README.md  config.yaml  rtsp-camera-configuration.json
.github/workflows/: ci.yml
components/artifacts/com.aws-sample.webrtc/1.0.0/: setting.json
components/recipes/: aws.greengrass.labs.webrtc-1.0.0.json  com.aws-sample.webrtc-1.0.0.json
scripts/: attach-necessary-policies.sh  create-aws-resource.sh  delete-component.sh  deploy-component.sh  generate-component.sh  generate-iot-greengrass.sh  install-ggv2-ssh.sh  upload-component-version.sh
source/: CMakeLists.txt  WebrtcAppFilePaths.cmake  run_webrtc.py
source/patches/: 0001-ecs-support.patch  0001-the-control-of-rtspsrc.patch
source/src/: AppCommon.c  AppCredential.c  AppCredentialWrap.c  AppDataChannel.c  AppHashTableWrap.c  AppMain.c  AppMessageQueue.c  AppMetrics.c  AppMetricsWrap.c  AppQueueWrap.c  AppRtspSrc.c  AppSignaling.c  AppTimerWrap.c
source/src/include/: AppCommon.h  AppConfig.h  AppCredentialWrap.h  AppDataChannel.h  AppHashTableWrap.h  AppMetricsWrap.h  AppQueueWrap.h  AppRtspSrcWrap.h  AppTimerWrap.h
source/test/: CMakeLists.txt
source/test/unit-test/: AppCommonUTest.c  AppCredentialUTest.c  AppDataChannelUTest.c  AppMessageQueueUTest.c  AppMetricsUTest.c  AppRtspSrcUTest.c  AppSignalingUTest.c  AppWebRTCUTest.c  CMakeLists.txt
source/tools/cmock/: project.yml
source/tools/coverity/: misra.config
